--- a/newsportal/project/.env
+++ b/newsportal/project/.env
@@ -3,3 +3,6 @@ EMAIL_HOST_PASSWORD='Valer@360dota10'
 EMAIL_HOST_USER='MANJUKI4YAN'
 DEFAULT_FROM_EMAIL='MANJUKI4YAN@yandex.ru'
 SERVER_EMAIL='MANJUKI4YAN@yandex.ru'
+
+CLIENT_ID='116596525388-73e0lsghssqn8gll0p10c5v63j2206s4.apps.googleusercontent.com'
+SECRET='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'
